--- a/index.html
+++ b/index.html
@@ -6,13 +6,52 @@
     <title>მთავარი</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="//cdn.web-fonts.ge/fonts/bpg-nino-mkhedruli/css/bpg-nino-mkhedruli.min.css">
 </head>
 <body>
     <div class="container">
         <header>
             <img src="img/HTML_.png" alt="html" class="img1">
-            
+            <a href="#" class="thispage">მთავარი</a>
+            <a href="pages/index2.html">სიახლეები</a>
+            <a href="pages/index3.html">კონტაქტი</a>
         </header>
+        <section>
+         <article> <div class="box">
+            <h1 class="date">26</h1>
+        </div>
+<h1 class="month">მაისი</h1>
+<h1 class="topic">ვებ გვერდის სტრუქტურისთვის გამოყენებული კონტენტი</h1>
+<img src="img/pic-1 1.png" alt="coding" class="img2">
+<p class="p1">1989 წელს ევროპაში, ცერნის ლაბორატორიაში (ფრ. Conseil Européen pour la Recherche Nucléaire, CERN), ტიმ ბერნერეს ლიმ (Sir Timothy John «Tim» Berners Lee) ვებგვერდის (World Wide Web (WWW)) კონცეფცია შეიმუშავა. თუკი მანამდე მეილით ინფორმაციის მხოლოდ კონკრეტული ადრესატისთვის გაგზავნა შეიძლებოდა, ტიმ ბერნერეს ლიმ ინფორმაციის გავრცელების კიდევ უფრო გამარტივება მოინდომა. <br><br> მისი იდეა, ერთი შეხედვით, მარტივი და დღევანდელი გადმოსახედიდან სავსებით ბუნებრივი იყო. მეილი ხომ ერთგვარი კომპიუტერული ფაილია, რომელიც გარკვეულ ციფრულ ინფორმაციას მოიცავს. ხომ შეიძლება ეს ფაილი, ინფორმაცია, კონკრეტულ ადრესატს კი არ გავუგზავნოთ, არამედ ინტერნეტში დავდოთ და დაინტერესებულმა პირებმა იქ ნახონ. ვებგვერდი კომპიუტერული ფაილია, რომელიც ინტერნეტის ერთ-ერთ სერვერზე დევს და მისი გახსნა ნებისმიერ მსურველს შეუძლია. <br><br>ვებგვერდის ასაწყობად დეველოპერები რამდენიმე პროგრამულ ინსტრუმენტს იყენებენ, რომელთაგან ყველაზე გავრცელებულია:<br> 1. ჰიპერტექსტური მარკირების ენა ანუ HTML-ი;<br> 2. კასკადური სტილების ცხრილები ანუ CSS-ი;<br> 3. კროსპლატფორმული სკრიპტების ენა ანუ JavaScript-ი.</p>
+         </article>  
+         <article>
+            <div class="box">
+                <h1 class="date">27</h1>
+            </div>
+            <h1 class="month">მაისი</h1>
+            <h1 class="topic">ვინ არიან და რას აკეთებენ ვებდეველოპერები</h1>
+            <img src="img/pic-2 1.png" alt="</>" class="img2">
+            <p class="p2">იმ ადამიანებს, რომლებიც ვებგვერდის გარეგნულ სახეს ქმნიან, ვებდეველოპერები ჰქვიათ. ასევე მათ ხშირად Front End Developer-ებსაც უწოდებენ, რაც ხაზს უსვამს იმას, რომ ისინი ვებგვერდის Front-ს ანუ იმ ნაწილს ქმნიან, რომელთანაც მომხმარებელი შედის ინტერაქციაში. ზოგისთვის ალბათ უცნაურად ჟღერს, მაგრამ ვებგვერდის აწყობა შემოქმედებითი პროცესია, ვინაიდან ვებდეველოპერს მუდამ ახალი, განსხვავებული ვებგვერდის შექმნა უწევს. ვებდეველოპმენტი როგორც წესი გუნდური საქმიანობაა და რამდენიმე ეტაპისაგან შედგება. ვებდიზაინერები ქმნიან ვებგვერდის დიზაინს. შემდეგ კი ვებდეველოპერები, დამტკიცებული დიზაინის მიხედვით, აწყობენ ვებგვერდს. ამ პროცესში შეიძლება Back-End დეველოპერებიც იყვნენ ჩართულები. როცა ვებგვერდი მზადაა, საქმეში ტესტერები ერთვებიან. ისინი ტესტირების პროცესით ამოწმებენ, რამდენად გამართულად მუშაობს საიტი.</p>
+         </article>
+         <article>
+            <div class="box">
+                <h1 class="date">28</h1>
+            </div>
+            <h1 class="month">მაისი</h1>
+            <h1 class="topic">ვებდეველოპმენტის საფუძვლები</h1>
+            <img src="img/pic-3 1.png" alt="laptop" class="img2">
+            <p class="p3">არსებობს წარმოდგენა, რომ ვებგვერდის აწყობა მხოლოდ ტექნიკური განათლების მქონე ადამიანს შეუძლია ისწავლოს. თუმცა, რაც დრო გადის, საპირისპირო სურათს ვხედავთ. სულ უფრო მეტი, სხვადასხვა პროფესიის ადამიანი სწავლობს პროგრამირებას, სხვადასხვა სირთულის აპლიკაციებს ქმნის და თავად აწყობს ვებგვერდებს. ტექნოლოგიების განვითარებამ შესაძლებელი გახადა, რომ სხვადასხვა პროფესიის ადამიანებმა თავად შეძლონ საკუთარი იდეების რეალიზება. თუკი ადრე ინოვაციური იდეის რეალიზებისათვის საჭირო იყო ფინანსები, დღეს ადამიანს შეუძლია, თავად დაეუფლოს იდეის რეალიზებისათვის საჭირო ტექნიკურ ცოდნას, მაგალითად, შეისწავლოს ვებგვერდის აწყობა და შექმნას საკუთარი კომპანიის ვებგვერდი, ააწყოს ონლაინ მაღაზია ან რაიმე სხვა ვირტუალური ონლაინ სერვისი.</p>
+         </article>
+        </section>
+        <footer class="f1">
+            <img src="img/facebook-icon-512x512-seb542ju 2.png" alt="facebook">
+            <div class="line"></div>
+            <img src="img/YouTube_full-color_icon_(2017) 2.png" alt="youtube">
+        </footer>
     </div>
 </body>
 </html>
