--- a/pages/index2.html
+++ b/pages/index2.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="//cdn.web-fonts.ge/fonts/bpg-nino-mkhedruli/css/bpg-nino-mkhedruli.min.css">
-    <title>სიახლეები</title>
+<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-nino-mkhedruli/css/bpg-nino-mkhedruli.min.css">
+
+<title>სიახლეები</title>
 </head>
 <body>
     <header class="header2">
@@ -21,13 +22,27 @@
     <div class="container2">
         <section>
             <img src="../img/HTML 1.png" alt="html img" class="img4">
-             <h1 class="fine1">სიახლეები</h1>
-             <div class="line3"></div>
-             <h1 class="fine2">იხილეთ დეტალურად ყველა სიახლე</h1>
+            <div class="hahah"> <h1 class="fine1">სიახლეები</h1>
+                <div class="line3"></div>
+                <h1 class="fine2">იხილეთ დეტალურად ყველა სიახლე</h1>
+                </div> 
              
-            <div class="card1-2">
+            <div class="card1">
+                <h1 class="cardtopic">WEBPAGE DEVELOPERS</h1>
+                <img src="../img/image 2.png" alt="photo" class="img6">
+                <p class="p5">Here we can see some random texts, hello, how are you. Here you can see another random texts, for your exercise. And wish you good luck. </p>
+            </div>
+            <div class="card2">
+                <h1 class="cardtopic">WEBPAGE ADRESSES</h1>
+                <img src="../img/image 1.png" alt="img">
+                <p class="p9">Here we can see some random texts, hello, how are you. Here you can see another random texts, for your exercise. And wish you good luck. </p>
             </div>
         </section>
+        <footer style="margin-top: 91px;">
+            <img src="../img/facebook-icon-512x512-seb542ju 2.png" alt="facebook">
+            <div class="line"></div>
+            <img src="../img/YouTube_full-color_icon_(2017) 2.png" alt="youtube">
+        </footer>
     </div>
 </body>
 </html>
